; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_kperfbsd.c_sysctl_kdebug_filter.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_kperfbsd.c_sysctl_kdebug_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sysctl_req = type { i64, i64, i64 }
%struct.kperf_kdebug_filter = type { i32 }

@USER_ADDR_NULL = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sysctl_req*)* @sysctl_kdebug_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sysctl_kdebug_filter(%struct.sysctl_req* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sysctl_req*, align 8
  %4 = alloca %struct.kperf_kdebug_filter*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.sysctl_req* %0, %struct.sysctl_req** %3, align 8
  %7 = load %struct.sysctl_req*, %struct.sysctl_req** %3, align 8
  %8 = icmp ne %struct.sysctl_req* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load %struct.sysctl_req*, %struct.sysctl_req** %3, align 8
  %12 = getelementptr inbounds %struct.sysctl_req, %struct.sysctl_req* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @USER_ADDR_NULL, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %29

16:                                               ; preds = %1
  store %struct.kperf_kdebug_filter* null, %struct.kperf_kdebug_filter** %4, align 8
  %17 = call i64 @kperf_kdebug_get_filter(%struct.kperf_kdebug_filter** %4)
  store i64 %17, i64* %5, align 8
  %18 = load i64, i64* %5, align 8
  %19 = call i64 @KPERF_KDEBUG_FILTER_SIZE(i64 %18)
  store i64 %19, i64* %6, align 8
  %20 = load i64, i64* %5, align 8
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %16
  %23 = load i32, i32* @EINVAL, align 4
  store i32 %23, i32* %2, align 4
  br label %45

24:                                               ; preds = %16
  %25 = load %struct.sysctl_req*, %struct.sysctl_req** %3, align 8
  %26 = load %struct.kperf_kdebug_filter*, %struct.kperf_kdebug_filter** %4, align 8
  %27 = load i64, i64* %6, align 8
  %28 = call i32 @SYSCTL_OUT(%struct.sysctl_req* %25, %struct.kperf_kdebug_filter* %26, i64 %27)
  store i32 %28, i32* %2, align 4
  br label %45

29:                                               ; preds = %1
  %30 = load %struct.sysctl_req*, %struct.sysctl_req** %3, align 8
  %31 = getelementptr inbounds %struct.sysctl_req, %struct.sysctl_req* %30, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* @USER_ADDR_NULL, align 8
  %34 = icmp ne i64 %32, %33
  br i1 %34, label %35, label %43

35:                                               ; preds = %29
  %36 = load %struct.sysctl_req*, %struct.sysctl_req** %3, align 8
  %37 = getelementptr inbounds %struct.sysctl_req, %struct.sysctl_req* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = load %struct.sysctl_req*, %struct.sysctl_req** %3, align 8
  %40 = getelementptr inbounds %struct.sysctl_req, %struct.sysctl_req* %39, i32 0, i32 2
  %41 = load i64, i64* %40, align 8
  %42 = call i32 @kperf_kdebug_set_filter(i64 %38, i64 %41)
  store i32 %42, i32* %2, align 4
  br label %45

43:                                               ; preds = %29
  %44 = load i32, i32* @EINVAL, align 4
  store i32 %44, i32* %2, align 4
  br label %45

45:                                               ; preds = %43, %35, %24, %22
  %46 = load i32, i32* %2, align 4
  ret i32 %46
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @kperf_kdebug_get_filter(%struct.kperf_kdebug_filter**) #1

declare dso_local i64 @KPERF_KDEBUG_FILTER_SIZE(i64) #1

declare dso_local i32 @SYSCTL_OUT(%struct.sysctl_req*, %struct.kperf_kdebug_filter*, i64) #1

declare dso_local i32 @kperf_kdebug_set_filter(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
